Added keys for app/client for google drive Added most of the login code (untested) Edited html test pages to include login/logout buttons that do what you would expect
Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/Sandbox/Drive/index.html
+++ b/Sandbox/Drive/index.html
@@ -10,9 +10,14 @@
 		    width: 100px;
 		    height: 100px;
 		    background: red;
+		    cursor: pointer;
 		} 
 	</style>
 	<body>
+		<div id="LoginButton" class="button"> Login </div>
+		<br>
+		<div id="LogoutButton" class="button"> Logout </div>
+		<br>
 		<div id="SaveButton" class="button"> Save </div>
 		<br>
 		<div id="RetrieveButton" class="button"> Retrieve </div>
