--- a/Sandbox/Dropbox/index.html
+++ b/Sandbox/Dropbox/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>Cumulus</title>
 
-		<script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js"></script>
 	</head>	
 	<style>
 		.button
@@ -14,6 +13,10 @@
 		} 
 	</style>
 	<body>
+		<div id="LoginButton" class="button"> Login </div>
+		<br>
+		<div id="LogoutButton" class="button"> Logout </div>
+		<br>
 		<div id="SaveButton" class="button"> Save </div>
 		<br>
 		<div id="RetrieveButton" class="button"> Retrieve </div>
