--- a/Sandbox/Drive/index.html
+++ b/Sandbox/Drive/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Cumulus</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
 
 	</head>	
 	<style>
