Updated index to include html insert files.
Updated save file to include pulling files locally.

Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/Sandbox/Drive/index.html
+++ b/Sandbox/Drive/index.html
@@ -20,8 +20,8 @@
 		<br>
 		<div id="LogoutButton" class="button"> Logout </div>
 		<br>
-		<div id="SaveButton" class="button"> Save </div>
-		<br>
+		<input type="file" id="SaveButton" name="files[]" multiple />
+		<output id="list"></output>		<br>
 		<div id="RetrieveButton" class="button"> Retrieve </div>
 		<br>
 		<div id="Delete" class="button"> Delete </div>
