Drive retrieval sandboxed version works
Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/Sandbox/Drive/index.html
+++ b/Sandbox/Drive/index.html
@@ -28,5 +28,6 @@
 	</body>
 
 	<script src="Save/save.js"></script>
+	<script src="Retrieve/load.js"></script>
 	<script src="Login/login.js"></script>
 </html>
