Delete works too - currently in testing mode, needs to work in conjunction with retrieve Will eventually be hooked up to a db though so doesn't matter Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/Sandbox/Drive/index.html
+++ b/Sandbox/Drive/index.html
@@ -24,10 +24,11 @@
 		<output id="list"></output>		<br>
 		<div id="RetrieveButton" class="button"> Retrieve </div>
 		<br>
-		<div id="Delete" class="button"> Delete </div>
+		<div id="DeleteButton" class="button"> Delete </div>
 	</body>
 
 	<script src="Save/save.js"></script>
 	<script src="Retrieve/load.js"></script>
+	<script src="Delete/delete.js"></script>
 	<script src="Login/login.js"></script>
 </html>
