Added dynamo support. Need to link dynamo to actual things.
Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 		} 
 	</style>
 	<body>
-		<div id="LoginButton" class="button"> Login </div>
+		<div id="LoginButton" class="button"> Login App </div>
 		<br>
-		<div id="LogoutButton" class="button"> Login </div>
+		<div id="LogoutButton" class="button"> Logout App </div>
 		<br>
-		<div id="DriveLoginButton" class="button"> Login </div>
+		<div id="NewUserButton" class="button"> New User </div>
 		<br>
-		<div id="DriveLogoutButton" class="button"> Logout </div>
+		<div id="DriveLoginButton" class="button"> Login Drive </div>
+		<br>
+		<div id="DriveLogoutButton" class="button"> Logout Drive </div>
 		<br>
 		<input type="file" id="SaveButton" name="files[]" multiple />
-		<output id="list"></output>		<br>
+		<output id="list"></output>		
+		<br>
 		<div id="RetrieveButton" class="button"> Retrieve </div>
 		<br>
 		<div id="DeleteButton" class="button"> Delete </div>
