--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Cumulus</title>
+		<script src="http://54.86.173.127:3009/socket.io/socket.io.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
-
 	</head>	
 	<style>
 		.button
