--- a/index.html
+++ b/index.html
@@ -1,40 +1,75 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Cumulus</title>
-		<script src="http://54.86.173.127:3009/socket.io/socket.io.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
-	</head>	
-	<style>
-		.button
-		{
-		    width: 100px;
-		    height: 100px;
-		    background: red;
-		    cursor: pointer;
-		} 
-	</style>
-	<body>
-		<div id="LoginButton" class="button"> Login App </div>
-		<br>
-		<div id="LogoutButton" class="button"> Logout App </div>
-		<br>
-		<div id="NewUserButton" class="button"> New User </div>
-		<br>
-		<div id="DriveLoginButton" class="button"> Login Drive </div>
-		<br>
-		<div id="DriveLogoutButton" class="button"> Logout Drive </div>
-		<br>
-		<input type="file" id="SaveButton" name="files[]" multiple />
-		<output id="list"></output>		
-		<br>
-		<div id="RetrieveButton" class="button"> Retrieve </div>
-		<br>
-		<div id="DeleteButton" class="button"> Delete </div>
-	</body>
+<head>
+<title>Cumulus</title>
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
+<script src="http://54.86.173.127:3009/socket.io/socket.io.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
+</head>
 
-	<script src="JS/driveAPI.js"></script>
-	<script src="JS/baseAPIclass.js"></script>
-	<script src="JS/main.js"></script>
+<body>
+<div class="header">
+    <div id="logo">
+         <h1> CUMULUS </h1>
+
+    </div>
+    <div id="cancel" class="button" onclick="hideInputLogin();">Cancel</div>
+    <div id="NewUserButton" class="button">Create Account</div>
+    <div id="LoginButton" class="button" onclick="showInputLogin();">Login</div>
+    <div id="passwordfield" class="inputfield" contenteditable="true" onclick="clearBox('passwordfield')">Password</div>
+    <div id="usernamefield" class="inputfield" contenteditable="true" onclick="clearBox('usernamefield')">Username</div>
+</div>
+<div class="content">
+    <div class="about">
+         <h2>It's a big cloud service.</h2>
+
+         <h3><em>For you.</em></h3>
+
+        <div class="button-table">
+            <table>
+                <tr>
+                    <td id="DriveLoginButton" class="largebutton">Login Drive</td>
+                    <td id="RetrieveButton" class="largebutton">Retrieve</td>
+                    <td id="DeleteButton" class="largebutton">Delete</td>
+                </tr>
+            </table>
+        </div>
+        <input type="file" id="SaveButton" name="files[]" multiple />
+        <output id="list"></output>
+        <br>
+        <br>
+        <p>Cumulus is for those users who need gratuitous amounts of storage.</p>
+        <p>Combining Google Drive, Dropbox, and maybe some other things, Cumulus offers a secure, unified storage space. Keeping track of your files has probably never been this easy!</p>
+    </div>
+</div>
+
+<script>
+document.getElementById("usernamefield").style.display = "none";
+document.getElementById("passwordfield").style.display = "none";
+document.getElementById("cancel").style.display = "none";
+
+function clearBox(itemID) {
+    document.getElementById(itemID).innerHTML = "";
+}
+
+function showInputLogin() {
+    document.getElementById("NewUserButton").style.display = "none";
+    document.getElementById("usernamefield").style.display = "inline";
+    document.getElementById("passwordfield").style.display = "inline";
+    document.getElementById("cancel").style.display = "inline";
+}
+
+function hideInputLogin() {
+    document.getElementById("NewUserButton").style.display = "inline";
+    document.getElementById("usernamefield").style.display = "none";
+    document.getElementById("passwordfield").style.display = "none";
+    document.getElementById("cancel").style.display = "none";
+}
+</script>
+<script src="JS/driveAPI.js"></script>
+<script src="JS/baseAPIclass.js"></script>
+<script src="JS/main.js"></script>
+</body>
 </html>
