Signed-off-by: Adrian Garza <adrianhgarza@gmail.com> moved to mainUI
Signed-off-by: Adrian Garza <adrianhgarza@gmail.com>

--- a/index.html
+++ b/index.html
@@ -45,29 +45,7 @@
     </div>
 </div>
 
-<script>
-document.getElementById("usernamefield").style.display = "none";
-document.getElementById("passwordfield").style.display = "none";
-document.getElementById("cancel").style.display = "none";
-
-function clearBox(itemID) {
-    document.getElementById(itemID).innerHTML = "";
-}
-
-function showInputLogin() {
-    document.getElementById("NewUserButton").style.display = "none";
-    document.getElementById("usernamefield").style.display = "inline";
-    document.getElementById("passwordfield").style.display = "inline";
-    document.getElementById("cancel").style.display = "inline";
-}
-
-function hideInputLogin() {
-    document.getElementById("NewUserButton").style.display = "inline";
-    document.getElementById("usernamefield").style.display = "none";
-    document.getElementById("passwordfield").style.display = "none";
-    document.getElementById("cancel").style.display = "none";
-}
-</script>
+<script src="JS/mainUI.js"></body>
 <script src="JS/driveAPI.js"></script>
 <script src="JS/baseAPIclass.js"></script>
 <script src="JS/main.js"></script>
