Got user login to interact with dynamo db full circle.
Code needs to be styled, commented, and cleaned.

Userkey's need to be integrated to local app code.

Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Cumulus</title>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
-		<script src="http://54.86.173.127:3009/socket.io/socket.io.js"></script>
+		<script src="http://54.86.173.127:5000/socket.io/socket.io.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
 	</head>
@@ -46,8 +46,10 @@
 		    </div>
 		</div>
 
+		<script src="JS/global.js"></script>
 		<script src="JS/driveAPI.js"></script>
 		<script src="JS/baseAPIclass.js"></script>
+		<script src="JS/clientToServerHandler.js"></script>
 		<script src="JS/mainUI.js"></script>
 		<script src="JS/main.js"></script>
 	</body>
