--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Cumulus</title>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
-		<!--<script src="http://54.86.173.127:3009/socket.io/socket.io.js"></script> -->
+		<script src="http://54.86.173.127:5000/socket.io/socket.io.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
 	</head>
