--- a/index.html
+++ b/index.html
@@ -47,15 +47,23 @@
 		    <div class="about" id="usercreator">
 		    	<h2>Creating an account is fast and easy.</h2>
 		    	<br>
-		    	<form>
-		    		<input type="text" name="firstname"> First name
+		    	<form method="POST" name="userinfo">
+		    		<input type="text" name="firstname" placeholder="First name">
 		    		<br>
-		    		<input type="text" name="lastname"> Last name
+		    		<input type="text" name="lastname" placeholder="Last name"> 
 		    		<br>
-		    		<input type="email" name="email"> Email
+		    		<input type="email" name="email" placeholder="Email"> 
 		    		<br>
-		    		<input type="password" name="password"> Password
+		    		<input id="passwordinput" type="password" name="password" placeholder="Password">
+		    		<br>
+		    		<br>
+		    		<br>
+		    		<div id="GetStartedButton" class="largebutton">
+		    			Get Started
+		    		</div>
 		    	</form>
+		    	<br>
+		    	<span id="legal">By creating an account, you agree to our <span id="terms" class="small-link">Terms of Use</span> and our <span id="privacy" class="small-link">Privacy Policy</span>.</span>
 		    </div>
 		</div>
 
