--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		    <div id="UsernameField" class="inputfield" contenteditable="true">Username</div>
 		</div>
 		<div class="content">
-		    <div class="about" id="flavortext">
+		    <div class="about" id="FlavorText">
 		         <h2>It's a big cloud service.</h2>
 
 		         <h3><em>For you.</em></h3>
@@ -44,7 +44,7 @@
 		        <p>Cumulus is for those users who need gratuitous amounts of storage.</p>
 		        <p>Combining Google Drive, Dropbox, and maybe some other things, Cumulus offers a secure, unified storage space. Keeping track of your files has probably never been this easy!</p>
 		    </div>
-		    <div class="about" id="usercreator">
+		    <div class="about" id="UserCreator">
 		    	<h2>Creating an account is fast and easy.</h2>
 		    	<br>
 		    	<form method="POST" name="userinfo">
@@ -63,7 +63,9 @@
 		    		</div>
 		    	</form>
 		    	<br>
-		    	<span id="legal">By creating an account, you agree to our <span id="terms" class="small-link">Terms of Use</span> and our <span id="privacy" class="small-link">Privacy Policy</span>.</span>
+		    	<span class="legal">By creating an account, you agree to our <span id="terms" class="small-link">Terms of Use</span> and our <span id="privacy" class="small-link">Privacy Policy</span>.</span>
+		    	<br>
+		    	<span class="legal"><span class="small-link" id="CancelUserCreator">Cancel</span></span>
 		    </div>
 		</div>
 
