--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Cumulus</title>
+		<link rel="icon" type="image/png" href="img/favicon-01.png" sizes="16x16">
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
 		<script src="http://54.86.173.127:5000/socket.io/socket.io.js"></script>
