--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
 		    <div class="about" id="UserCreator">
 		    	<h2>Creating an account is fast and easy.</h2>
 		    	<br>
-		    	<form method="POST" name="userinfo">
-		    		<input type="text" name="firstname" placeholder="First name">
+		    	<form id="RegisterNewUser" name="userinfo">
+		    		<input id="NewFirstnameInput" type="text" name="firstname" placeholder="First name" required>
 		    		<br>
-		    		<input type="text" name="lastname" placeholder="Last name"> 
+		    		<input id="NewLastnameInput" type="text" name="lastname" placeholder="Last name" required> 
 		    		<br>
-		    		<input type="email" name="email" placeholder="Email"> 
+		    		<input id="NewEmailInput" type="email" name="email" placeholder="Email" required> 
 		    		<br>
-		    		<input id="passwordinput" type="password" name="password" placeholder="Password">
+		    		<input id="NewUsernameInput" type="username" name="username" placeholder="Username" required>
+		    		<br>
+		    		<input id="NewPasswordInput" type="password" name="password" placeholder="Password" required>
 		    		<br>
 		    		<br>
 		    		<br>
-		    		<div id="GetStartedButton" class="largebutton">
-		    			Get Started
-		    		</div>
+		    		<input type="submit" value="Submit">
 		    	</form>
 		    	<br>
 		    	<span class="legal">By creating an account, you agree to our <span id="terms" class="small-link">Terms of Use</span> and our <span id="privacy" class="small-link">Privacy Policy</span>.</span>
