--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 	<head>
 		<title>Cumulus</title>
 		<link rel="icon" type="image/png" href="img/favicon.png">
+
+		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
 		<script src="http://54.86.173.127:5000/socket.io/socket.io.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -13,7 +17,7 @@
 	<body>
 		<div class="header">
 		    <div id="logo">
-		         <h1> CUMULUS </h1>
+		         <h1> CUMULUS <span id="CurrentUser">not logged in</span></h1>
 
 		    </div>
 		    <div id="Cancel" class="button">Cancel</div>
