Updated CSS/HTML to add file viewer.
Changed gDrive scope from immediate true to false

Updated readme


Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" href="css/mainUI.css" type="text/css" charset="utf-8" />
+		<link rel="stylesheet" href="css/preLoginUI.css" />
+		<link rel="stylesheet" href="css/postLoginUI.css" />
 		<script src="http://54.86.173.127:5000/socket.io/socket.io.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://apis.google.com/js/client.js"></script> 
@@ -32,36 +33,24 @@
                         <input type="text" name="username" id="UsernameField" placeholder="Name"/>
                         <input type="password" name="password" id="PasswordField" placeholder="Password"/>
                     </form>
-					<div id="Cancel" class="button">Cancel</div>
-				    <div id="SubmitLogin" class="button">Submit</div>
-				    <div id="NewUserButton" class="button">Create Account</div>
-				    <div id="LoginButton" class="button">Login</div>
+					<div id="Cancel" class="button-prelogin">Cancel</div>
+				    <div id="SubmitLogin" class="button-prelogin">Submit</div>
+				    <div id="NewUserButton" class="button-prelogin">Create Account</div>
+				    <div id="LoginButton" class="button-prelogin">Login</div>
 				</li>
 			</ul>
 		</div>
-		<div class="content">
+		<div class="prelogin-content">
 		    <div class="about" id="FlavorText">
-		         <h2>It's a big cloud service.</h2>
+		        <h2>It's a big cloud service.</h2>
 
-		         <h3><em>For you.</em></h3>
+		        <h3><em>For you.</em></h3>
 
-		        <div class="button-table">
-		            <table>
-		                <tr>
-		                    <td id="DriveLoginButton" class="largebutton">Login Drive</td>
-		                    <td id="RetrieveButton" class="largebutton">Retrieve</td>
-		                    <td id="DeleteButton" class="largebutton">Delete</td>
-		                </tr>
-		            </table>
-		        </div>
-		        <input type="file" id="SaveButton" name="files[]" multiple />
-		        <output id="list"></output>
+		      
 		        <br>
 		        <br>
 		        <p>Cumulus is for those users who need gratuitous amounts of storage.</p>
 		        <p>Combining Google Drive, Dropbox, and maybe some other things, Cumulus offers a secure, unified storage space. Keeping track of your files has probably never been this easy!</p>
-
-		        <a download="info.txt" id="downloadLink">Download</a>
 		    </div>
 		    <div class="about" id="UserCreator">
 		    	<h2>Creating an account is fast and easy.</h2>
@@ -87,6 +76,102 @@
 		    	<span class="legal"><span class="small-link" id="CancelUserCreator">Cancel</span></span>
 		    </div>
 		</div>
+
+
+		<div class="postlogin-content">
+			<div class="header-2">
+				Cumulus
+				<div class="subtitle">
+					The Universal Cloud and Data Storage Collector
+				</div>
+			</div>
+
+			  
+			<div class="spacer-15"></div>
+
+			<div class="side-panel">
+
+				<div class="spacer-15"></div>
+				<div class="button upload" id="UploadButton"> Upload </div>
+				<input type="file" id="InputFile" name="files[]" multiple />
+
+				<div class="spacer-15"></div>
+
+				<div class="text-amount-left one">
+					You Have
+				</div>
+
+				<div class="number-amount-left"> 50 Gb </div>
+
+				<div class="text-amount-left two">
+				Left In Your Clouds
+				</div>
+
+				<div class="spacer-5"></div>
+
+				<div class="space-left-bar">
+					<div class="space-fill"></div>
+				</div>
+
+				<div class="spacer-10"></div>
+
+				<div class="button add-cloud" id="AddCloud"> Add a Cloud </div>
+
+				<div class="button-table">
+		            <table>
+		                <tr>
+		                    <td id="RetrieveButton" class="largebutton">Retrieve</td>
+		                    <td id="DeleteButton" class="largebutton">Delete</td>
+		                </tr>
+		            </table>
+		        </div>
+
+		        <input type="file" id="HiddenUploadButton" name="files[]" multiple />
+
+		        <a download="info.txt" id="downloadLink">Download Requested File</a>
+			</div>
+
+			<div class="center-panel">
+	            <ul class="file-list-container">
+	            	<li class="file-list-top">
+	            		<ul class="file-header-info">
+							<li class="file-name-header">Title</li>
+							<li class="file-size-header">File Size</li>
+							<li class="file-chunk-header"># of Chunks</li>
+						</ul>
+	            	</li>
+	            </ul>
+	        </div>
+
+			<div class="new-cloud-panel">
+			    <div class="new-cloud-cover">
+			    </div>
+			    <ul class="new-cloud-containers">
+		        	<li class="button Google">
+		        		<div class="image"></div>
+		        	</li>
+		        	<li class="button Dropbox">
+		        		<div class="image"></div>
+		        	</li>
+		        	<li class="button OneDrive">
+		        		<div class="image"></div>
+		        	</li>
+		        </ul>
+			</div>
+
+
+			<li class="button file-list-container-li" id="FileTemplate">
+				<div class="file-container">
+					<ul class="file-info">
+						<li class="file-name">testname.txt</li>
+						<li class="file-size">30 gb</li>
+						<li class="file-chunk">30</li>
+					</ul>
+				</div>
+			</li>
+
+		</div>
+
 
 		<script src="JS/global.js"></script>
 		<!--Libraries and such-->
