--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <input type="text" name="username" id="UsernameField" placeholder="Name"/>
                         <input type="password" name="password" id="PasswordField" placeholder="Password"/>
                     </form>
-					<div id="Cancel" class="button-prelogin">Cancel</div>
-				    <div id="SubmitLogin" class="button-prelogin">Submit</div>
-				    <div id="NewUserButton" class="button-prelogin">Create Account</div>
-				    <div id="LoginButton" class="button-prelogin">Login</div>
+					<div id="Cancel" class="button button-prelogin">Cancel</div>
+				    <div id="SubmitLogin" class="button button-prelogin">Submit</div>
+				    <div id="NewUserButton" class="button button-prelogin">Create Account</div>
+				    <div id="LoginButton" class="button button-prelogin">Login</div>
 				</li>
 			</ul>
 		</div>
