--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				    <form id="TitlebarForm">
                         <input type="text" name="username" id="UsernameField" placeholder="Name"/>
                         <input type="password" name="password" id="PasswordField" placeholder="Password"/>
+                        <input id="HiddenSubmitLogin" type="submit"/>
                     </form>
 					<div id="Cancel" class="button-prelogin">Cancel</div>
 				    <div id="SubmitLogin" class="button-prelogin">Submit</div>
