--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				    <form id="TitlebarForm">
                         <input type="text" name="username" id="UsernameField" placeholder="Name"/>
                         <input type="password" name="password" id="PasswordField" placeholder="Password"/>
-                        <input id="HiddenSubmitLogin" type="submit"/>
+                        <input class="HiddenSubmit" type="submit"/>
                     </form>
 					<div id="Cancel" class="button button-prelogin">Cancel</div>
 				    <div id="SubmitLogin" class="button button-prelogin">Submit</div>
@@ -69,8 +69,9 @@
 		    		<br>
 		    		<br>
 		    		<br>
-		    		<input type="submit" value="Submit">
+		    		<input class="HiddenSubmit" type="submit"/>
 		    	</form>
+	    		<div id="NewSubmit" class="button">Submit</div>
 		    	<br>
 		    	<span class="legal">By creating an account, you agree to our <span id="terms" class="small-link">Terms of Use</span> and our <span id="privacy" class="small-link">Privacy Policy</span>.</span>
 		    	<br>
