Got basic visualizer working
Signed-off-by: Amol Kapoor <theahura@gmail.com>

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 		<!--Libraries and such-->
 		<script src="JS/driveAPI.js"></script>
 		<script src="JS/baseAPIclass.js"></script>
+		<script src="JS/files.js"></script>
 		<script src="JS/user.js"></script>
 		<!--All the actual function calls are in here-->
 		<script src="JS/serverToClientHandler.js"></script>
